// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`departments query fetch departments with root 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Solutions Department",
  },
  Object {
    "id": 2,
    "name": "Group Department",
  },
  Object {
    "id": 3,
    "name": "Functionality Department",
  },
]
`;

exports[`departments query fetch departments with state user 1`] = `
Array [
  Object {
    "id": 2,
    "name": "Functionality Department",
  },
  Object {
    "id": 4,
    "name": "Functionality Department",
  },
]
`;
